Update Grapher.java